--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "3.0.0rc4",
     "jade": "*",
     "gpio": "*",
-    "pi-gpio": "*"
+    "pi-gpio": "*",
+    "tellstick": "*"
   }
 }
